--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Play It Yourself</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <style type="text/css">
+  
+  <title>Frontend Mentor | Results summary component</title>
 
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
@@ -45,7 +51,7 @@
           Reaction
          </p>
          <p id="p5" class="pno">
-          80 <a id="hundred">/ 100</a>
+          80 <a class="hundred">/ 100</a>
          </p>
        </div>
      </div>
@@ -56,7 +62,7 @@
           Memory
          </p>
          <p id="p7" class="pno">
-           92 <a id="hundred">/ 100</a>
+           92 <a class="hundred">/ 100</a>
         </p>
        </div>
      </div>
@@ -67,7 +73,7 @@
            Verbal
          </p>
          <p id="p9" class="pno">
-           61 <a id="hundred">/ 100</a>
+           61 <a class="hundred">/ 100</a>
          </p>
        </div>
      </div>
@@ -78,7 +84,7 @@
             Visual
           </p>
           <p id="p11" class="pno">
-           72 <a id="hundred">/ 100</a>
+           72 <a class="hundred">/ 100</a>
           </p>
         </div>
       </div>
